--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,11 +17,11 @@
   }
 }
 
+html,
 body {
   color: var(--foreground);
-  background: var(--background);
+  background: transparent;
   font-family: Arial, Helvetica, sans-serif;
-  backdrop-filter: blur(10px);
 }
 
 
